Zoom overflow fixed

--- a/packages/vsce/src/webviews/css/style.css
+++ b/packages/vsce/src/webviews/css/style.css
@@ -9,13 +9,16 @@
   position: fixed;
   top: 0;
   padding-left: 0.625rem;
-  padding-right: 4.188rem;
   left: 2.25rem;
-  right: 6.25rem;
+  right: 2.25rem;
 }
 
 .padding-top-20 {
    padding-top: 1.25rem;
+}
+
+.padding-top-10 {
+   padding-top: 0.625rem;
 }
 
 .line {
@@ -116,7 +119,6 @@ body.vscode-light th {
 body.vscode-light thead {
     background-color: #f0f0f0;
     text-align: left;
-    width: 73.75rem;
     color: var(--vscode-foreground);
   }
 
@@ -144,7 +146,6 @@ body.vscode-dark th {
 body.vscode-dark thead {
     background-color: rgb(40,40,40);
     text-align: left;
-    width: 73.75rem;
     color: var(--vscode-foreground);
   }
 
